--- a/Page1table.html
+++ b/Page1table.html
@@ -7,7 +7,7 @@
 		<h2>Home work of lesson number 3</h2>
 		<h4>To check home work, go please to the page number 2</h4>
 			<p>
-				<a href="table.html">Page Number 2</a>
+				<a href="Page2table.html">Page Number 2</a>
 			</p>
 		<p><i><b>Or click on the picture below</b></i></p>
 			<p>
