--- a/Page2table.html
+++ b/Page2table.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<p>
-		<a href="tablepage1.html">Back to Main Page</a>
+		<a href="Page1table.html">Back to Main Page</a>
 	</p>
 	<p>
-		<a href="tablepage3.html">Next Page</a>
+		<a href="Page3table.html">Next Page</a>
 	</p>
 	<table align="center" border="6px dashed green" width="30%" cellpadding="30px">
 		<tr>
