--- a/Page1table.html
+++ b/Page1table.html
@@ -11,7 +11,7 @@
 			</p>
 		<p><i><b>Or click on the picture below</b></i></p>
 			<p>
-				<a href="tablepage3.html">
+				<a href="Page3table.html">
 				<img src="Quran2.jpg">
 				</a>
 			</p>
