--- a/Page3table.html
+++ b/Page3table.html
@@ -17,10 +17,10 @@
 
 		</tr>
 		<p>
-				<a href="table.html"> Return to Page Number 2</a>
+				<a href="Page2table.html"> Return to Page Number 2</a>
 			</p>
 		<p>
-				<a href="tablepage1.html">Back to Main Page</a>
+				<a href="Page1table.html">Back to Main Page</a>
 			</p>
 	
 		</body>
