--- a/story.html
+++ b/story.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<title>StoryofTheProphets</title>
@@ -15,7 +14,7 @@
  	</div>
 	</header>
 
-	<div menu="class">
+	<div menu>
 		<ul>
 	 		<li><a href="storyAdam">Adam</a></li>
 			<li><a href="storyNuh">Nuh</a></li>
