--- a/story.html
+++ b/story.html
@@ -14,7 +14,7 @@
  	</div>
 	</header>
 
-	<div menu>
+	<div="menu">
 		<ul>
 	 		<li><a href="storyAdam">Adam</a></li>
 			<li><a href="storyNuh">Nuh</a></li>
